<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#88f0ff"
    tools:context=".Sign_Up_Cust">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@f"
        android:text="Sign In"
        android:textColor="#000000"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/n"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/n"/>

    <EditText
        android:id="@+id/ninp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/m"/>

    <EditText
        android:id="@+id/emailinp"
        android:layout_width="300dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/mo"/>

    <EditText
        android:id="@+id/mobinp"
        android:layout_width="300dp"
        android:inputType="number"
        android:maxLength="10"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/pwd"/>

    <EditText
        android:id="@+id/pwdinp"
        android:layout_width="300dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:background="#000000"
            android:padding="3dp"
            android:text="@string/c"/>

        <Button
            android:id="@+id/clear"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:background="#000000"
            android:text="CLEAR"/>


    </LinearLayout>
</LinearLayout>