<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".Cust_Sign_In">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_margin="0dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ist"
        android:fontFamily="sans-serif-thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="#fff"
        android:text="It's Show Time "
        android:textSize="35dp" />

    <TextView
        android:id="@+id/wel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#ffff"
        android:text="Login Here"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Email"
        android:textSize="20dp" />
    <EditText
        android:background="#11000000"
        android:id="@+id/uninp"
        android:textSize="22dp"
        android:layout_width="300dp"
        android:hint="Email"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:text="@string/pwd"/>

    <EditText
        android:id="@+id/pwdinp"
        android:background="#11000000"
        android:inputType="textPassword"
        android:textSize="22dp"
        android:hint="Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/signup"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:background="@color/white"
            android:layout_marginRight="50dp"
            android:textAllCaps="false"
            android:text="@string/c"/>
        <Button
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25dp"
            android:padding="10dp"
            android:text="@string/d"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>


    </LinearLayout>
    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"
        android:textSize="20dp"
        android:onClick="Finger"
        android:textColor="@color/white"
        android:padding="3dp"
        android:text="Fingerprint"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:textSize="25dp"
        android:text="Location"
        android:onClick="locate"
        android:textAllCaps="false"
        android:background="@color/backblue"
        android:textColor="@color/colorPrimary"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
      />
    </LinearLayout>
</LinearLayout>