...
            android:layout_height="0dp"
            android:layout_weight="0.7"
            >


            <Button
                android:id="@+id/seatselectionButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ee0042"
                android:text="Book"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textAlignment="center"></Button>

        </LinearLayout>

...
